@@ -2,73 +2,78 @@ package util;
 
 import model.Purchase;
 import model.PurchaseManager;
-
-import java.net.URI;
-import java.net.http.*;
-import java.net.http.HttpRequest.BodyPublishers;
-import java.net.http.HttpResponse.BodyHandlers;
-import java.util.List;
-
-import com.fasterxml.jackson.databind.*;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.core.type.TypeReference;
 
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.util.List;
+
 /**
- * Loads and saves PurchaseManager via a REST service.
+ * Loads and saves PurchaseManager via a shared Spring‐Boot REST service.
+ * Falls back to the local DataStore if the server is unreachable.
  */
 public class RemoteDataStore {
-    private static final String BASE = "http://localhost:8080/api/purchases";
-    private static final HttpClient HTTP = HttpClient.newHttpClient();
+    // Point at your backend’s LAN IP:
+    private static final String BASE =
+        "http://192.168.1.151:8080/api/purchases";
     private static final ObjectMapper M = new ObjectMapper();
 
-    /**  
-     * Fetch all purchases from the server.  
+    /**
+     * Fetch all purchases from the server; on failure, load locally.
      */
     public static PurchaseManager load() {
-        PurchaseManager mgr = new PurchaseManager();
         try {
-            HttpRequest req = HttpRequest.newBuilder()
-                .uri(URI.create(BASE))
-                .GET()
-                .build();
-            HttpResponse<String> resp = HTTP.send(req, BodyHandlers.ofString());
+            URL url = new URL(BASE);
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("GET");
+            conn.setRequestProperty("Accept", "application/json");
 
-            List<Purchase> list = M.readValue(
-                resp.body(),
-                new TypeReference<List<Purchase>>() {}
-            );
-            list.forEach(mgr::addPurchase);
+            int code = conn.getResponseCode();
+            if (code == 200) {
+                try (InputStream in = conn.getInputStream()) {
+                    List<Purchase> list = M.readValue(
+                      in, new TypeReference<List<Purchase>>() {}
+                    );
+                    PurchaseManager mgr = new PurchaseManager();
+                    list.forEach(mgr::addPurchase);
+                    return mgr;
+                }
+            } else {
+                // non-200: fall back
+                return DataStore.load();
+            }
         } catch (Exception e) {
+            // server down or network error
             e.printStackTrace();
-            // fallback to empty manager
+            return DataStore.load();
         }
-        return mgr;
     }
 
     /**
-     * Save (create or update) all purchases to the server.
-     * Note: This naively POSTs every purchase; you may wish to
-     * track IDs and do PUT for existing entities.
+     * Push all purchases to the server via POST (new) or PUT (existing).
+     * Errors are logged but do not interrupt the loop.
      */
     public static void save(PurchaseManager mgr) {
         mgr.getPurchases().forEach(p -> {
             try {
-                String json = M.writeValueAsString(p);
-                HttpRequest.Builder b = HttpRequest.newBuilder()
-                    .header("Content-Type", "application/json");
+                String urlStr = BASE + (p.getId() != null ? "/" + p.getId() : "");
+                URL url = new URL(urlStr);
+                HttpURLConnection conn =
+                    (HttpURLConnection) url.openConnection();
+                conn.setDoOutput(true);
+                conn.setRequestMethod(p.getId() != null ? "PUT" : "POST");
+                conn.setRequestProperty("Content-Type", "application/json");
 
-                HttpRequest req;
-                if (p.getId() == null) {
-                    // create
-                    req = b.uri(URI.create(BASE))
-                           .POST(BodyPublishers.ofString(json))
-                           .build();
-                } else {
-                    // update
-                    req = b.uri(URI.create(BASE + "/" + p.getId()))
-                           .PUT(BodyPublishers.ofString(json))
-                           .build();
+                try (OutputStream os = conn.getOutputStream()) {
+                    M.writeValue(os, p);
                 }
-                HTTP.send(req, BodyHandlers.discarding());
+
+                // trigger the request
+                conn.getResponseCode();
+                conn.disconnect();
             } catch (Exception e) {
                 e.printStackTrace();
             }
